--- a/workspace/cosine_sim_recommend.ipynb
+++ b/workspace/cosine_sim_recommend.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import MySQLdb as db\n",
@@ -17,23 +19,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "\n",
+    "with open('/home/ej/github/news_config.json') as f:\n",
+    "    config = json.load(f)\n",
+    "\n",
     "db = db.connect(\n",
-    "    \"127.0.0.1\",\n",
-    "    \"root\",\n",
-    "    '5555',\n",
-    "    \"news_rec\",\n",
-    "    charset='utf8',\n",
+    "    config['ADDR'],\n",
+    "    config['ID'],\n",
+    "    config['PW'],\n",
+    "    config['DB'],\n",
+    "    charset='utf8'\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sql = 'SELECT * FROM VIEW'\n",
@@ -44,7 +53,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pivot2 = view.pivot(index='user_id',columns='article_id',values='count').fillna(0)\n",
@@ -54,7 +65,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def recommend_articles(pivot, user_id, how_many_to_consider=5, how_many_to_rec=5):\n",
@@ -115,7 +128,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a = pivot.values\n",
@@ -126,7 +141,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "similar_user_index = sim[0].argsort()[-5:][::-1][1:]"
@@ -135,7 +152,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "similar_user = a[similar_user_index]"
@@ -165,7 +184,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pivot.loc['item'] = item_vector"
@@ -324,7 +345,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tmp = pivot.loc[1]\n",
@@ -354,7 +377,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "rec = pivot.loc['item']\n",
@@ -384,7 +409,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "not_seen_list = set(rec_index) - set(user_seen)"
@@ -393,7 +420,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "rec_target = rec[not_seen_list]"
@@ -429,14 +458,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
