--- a/workspace/naver_api_test.ipynb
+++ b/workspace/naver_api_test.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -11,7 +13,7 @@
     "import urllib.request\n",
     "import json\n",
     "\n",
-    "with open('../naver_api_info.txt', 'r') as f:\n",
+    "with open('/home/ej/github/naver_api_info.txt', 'r') as f:\n",
     "    client_id = str(f.readline().replace('\\n',''))\n",
     "    client_secret = str(f.readline().replace('\\n',''))\n",
     "    \n",
@@ -33,7 +35,9 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = json.loads(response_body.decode('utf-8'))"
@@ -62,7 +66,9 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dic = data['items']"
@@ -212,7 +218,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
