--- a/workspace/news_search_selection.ipynb
+++ b/workspace/news_search_selection.ipynb
@@ -25,7 +25,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import MySQLdb as db\n",
@@ -37,22 +39,31 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "import json\n",
+    "\n",
+    "with open('/home/ej/github/news_config.json') as f:\n",
+    "    config = json.load(f)\n",
+    "\n",
     "db = db.connect(\n",
-    "    \"127.0.0.1\",\n",
-    "    \"root\",\n",
-    "    '5555',\n",
-    "    \"news_rec\",\n",
-    "    charset='utf8',\n",
+    "    config['ADDR'],\n",
+    "    config['ID'],\n",
+    "    config['PW'],\n",
+    "    config['DB'],\n",
+    "    charset='utf8'\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "view = pd.read_sql('SELECT * FROM VIEW', db)\n",
@@ -180,7 +191,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = api_search('파이썬',10)['items']"
@@ -189,7 +202,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "crawling_list = []\n",
@@ -200,7 +215,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def go_get_article(crawling_list):\n",
@@ -252,7 +269,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tmp = [each.split('.') for each in tmp]"
@@ -261,7 +280,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def trimming(articles):\n",
@@ -293,7 +314,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tmp = [''.join(trimming(each)) for each in tmp]"
@@ -302,7 +325,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -312,7 +337,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pos_tagger = Twitter()\n",
@@ -331,7 +358,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "news_content = pd.DataFrame(columns=['content'])\n",
@@ -413,7 +442,9 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X_test = pd.Series(tmp)"
@@ -800,14 +831,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def news_rank(user_id, genre_matrix, y_pred, y_prob):\n",
@@ -899,7 +934,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from news_ranker import *"
@@ -955,7 +992,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -976,7 +1015,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
