--- a/workspace/model_training_from_db.ipynb
+++ b/workspace/model_training_from_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,23 +21,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "data = pd.read_sql('SELECT * FROM ARTICLE;', db.connect(\n",
-    "    \"127.0.0.1\",\n",
-    "    \"root\",\n",
-    "    '5555',\n",
-    "    \"news_rec\",\n",
-    "    charset='utf8',\n",
-    "))"
+    "import json\n",
+    "\n",
+    "with open('/home/ej/github/news_config.json') as f:\n",
+    "    config = json.load(f)\n",
+    "\n",
+    "db = db.connect(\n",
+    "    config['ADDR'],\n",
+    "    config['ID'],\n",
+    "    config['PW'],\n",
+    "    config['DB'],\n",
+    "    charset='utf8'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data = pd.read_sql('SELECT * FROM ARTICLE;', db)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 196,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X = data.content\n",
@@ -47,7 +67,9 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(data.content, data.area, test_size=0.3, random_state=2)"
@@ -108,7 +130,9 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X_train = X_train[:100]\n",
@@ -120,7 +144,9 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "clf = Pipeline([\n",
@@ -188,7 +214,9 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y_pred = model.predict(X_test)"
@@ -432,7 +460,9 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cnf_mat = confusion_matrix(y_test, y_pred)"
@@ -463,7 +493,9 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "clf_rep = classification_report(y_test, y_pred)"
@@ -506,7 +538,9 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
@@ -524,7 +558,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -545,7 +581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
