180513 Report about twitter and performance

--- a/workspace/model_training_from_db.ipynb
+++ b/workspace/model_training_from_db.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\anaconda\\lib\\site-packages\\sklearn\\cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import MySQLdb as db\n",
     "import pandas as pd\n",
@@ -16,37 +25,42 @@
     "from konlpy.tag import Twitter\n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
+    "from sklearn.cross_validation import cross_val_score\n",
     "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
+    "# import json\n",
     "\n",
-    "with open('/home/ej/github/news_config.json') as f:\n",
-    "    config = json.load(f)\n",
+    "# with open('/home/ej/github/news_config.json') as f:\n",
+    "#     config = json.load(f)\n",
+    "\n",
+    "# db = db.connect(\n",
+    "#     config['ADDR'],\n",
+    "#     config['ID'],\n",
+    "#     config['PW'],\n",
+    "#     config['DB'],\n",
+    "#     charset='utf8'\n",
+    "# )\n",
     "\n",
     "db = db.connect(\n",
-    "    config['ADDR'],\n",
-    "    config['ID'],\n",
-    "    config['PW'],\n",
-    "    config['DB'],\n",
+    "    '127.0.0.1',\n",
+    "    'root',\n",
+    "    '5555',\n",
+    "    'news_rec',\n",
     "    charset='utf8'\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.read_sql('SELECT * FROM ARTICLE;', db)"
@@ -54,14 +68,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "X = data.content\n",
     "y = data.area"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import KFold\n",
+    "\n",
+    "cv1 = KFold(n_splits=4, shuffle=True, random_state=0)\n",
+    "\n",
+    "clf = Pipeline([\n",
+    "    ('vect', TfidfVectorizer(tokenizer=lambda x: ['/'.join(t) for t in Twitter().pos(x)]) ),\n",
+    "    ('clf',MultinomialNB(alpha=0.01)),\n",
+    "])\n",
+    "\n",
+    "# for Test set\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size=0.2, random_state=0)\n",
+    "\n",
+    "scores = cross_val_score(clf, X_train, y_train, cv=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = classification_report(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'             precision    recall  f1-score   support\\n\\n          0       0.91      0.92      0.91       646\\n          1       0.87      0.86      0.87       566\\n          2       0.91      0.89      0.90       608\\n          3       0.93      0.94      0.93       640\\n          4       0.92      0.93      0.92       675\\n          5       0.94      0.94      0.94       679\\n\\navg / total       0.91      0.91      0.91      3814\\n'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.91352201, 0.92003146, 0.9166011 , 0.91653543])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores"
    ]
   },
   {
@@ -150,7 +250,7 @@
    "outputs": [],
    "source": [
     "clf = Pipeline([\n",
-    "    ('vect', TfidfVectorizer(tokenizer=lambda x: ['/'.join(t) for t in Twitter().pos(x)])),\n",
+    "    ('vect', TfidfVectorizer(tokenizer=lambda x: ['/'.join(t) for t in Twitter().pos(x)]) ),\n",
     "    ('clf',MultinomialNB(alpha=0.01)),\n",
     "])"
    ]
